src/bp/ui-studio/src/web/components/Layout/StatusBar/BottomPanel.styl
.container {
  background: black;
  height: calc(100% - 24px) !important;
  width: 100%;
  padding: 10px;
  padding-top: 5px;
}

.container :global(.bp3-tab-panel) {
  margin-top: 10px;
}

.tabs {
  height: 100%;

  :global(.bp3-tab-indicator) {
    background-color: #3c3c3c;
  }

  .tab {
    height: calc(100% - 40px);
    color: 888;
  }

  .tab[aria-selected='true'] {
    color: white;
  }

  .divide {
    margin: 0 5px;
  }
}

.logs {
  list-style-type: none;
  padding-left: 0;
  overflow-y: scroll;
  height: 100%;

  &::-webkit-scrollbar {
    width: 10px;
  }

  /* Track */
  &::-webkit-scrollbar-track {
    background: #222;
  }

  /* Handle normal */
  &::-webkit-scrollbar-thumb {
    background: #888;
    &:hover {
      background: #555;
    }
  }

  .end {
    font-size: 10px;
    margin-top: 5px;
    width: 100%;
    text-align: center;
    color: #888;
    padding-top: 3px;
    border-top: 1px solid #222;
  }

  .entry {
    .time {
      color: #999;
    }

    .level {
      padding-left: 10px;
      font-weight: bold;
    }

    .message {
      padding-left: 10px;
      opacity: 0.8;
      color: #888;
    }

    &:hover .message {
      opacity: 1;
    }

    &.time .level {
      color: #808080;
    }
    &.level-silly .level {
      color: #6c6c6c;
    }
    &.level-debug .level {
      color: #b59fff;
    }
    &.level-verbose .level {
      color: #a4fffc;
    }
    &.level-info .level {
      color: #6cbdff;
    }
    &.level-warn .level {
      color: #fce465;
    }
    &.level-error .level {
      color: #fe5151;
    }
  }
}

